# slack-pulse-backend

./: .env  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 5b9592b275d0_initial_migration.py
app/: main.py  seed.py
app/api/v1/: ai.py  hook.py  sync.py  task.py  websockets.py
app/core/: ai_service.py  socket.py
app/db/: redis_conn.py  session.py
app/models/: board.py  column.py  task.py  user.py  workspace.py
app/schemas/: ai.py  events.py  task.py
