[project]
name = "pulse-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.3",
    "fastapi>=0.128.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "sqlalchemy-utils>=0.42.1",
    "sqlmodel>=0.0.31",
    "uvicorn[standard]>=0.40.0",
]
